refactor: change `getAll` method in `UserRepository` to return a Stream of `UserPolicy`